--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.17.0",
     "asyncpg>=0.30.0",
     "fastapi>=0.115.13",
     "pydantic>=2.11.7",
